Mon Oct  3 15:44:15 UTC 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * docs/Purify.html:
        
          Updated doc file with installation info and more info about
          Purifying a spawned child process.

Mon Oct  3 10:14:19 2005  William Otte  <wotte@dre.vanderbilt.edu>

	* DAnCE/NodeApplicationManager/NodeApplicationManager_Impl.cpp

	Corrected a bug in parameter checking. 
	
	* DAnCE/NodeManager/Node_Manager.cpp

	Added documentation for the -d command line options. 
	
	* tools/Config_Handlers/RT-CCM/CIAOServerResources.cpp
	* tools/Config_Handlers/RT-CCM/CIAOServerResources.hpp
	* tools/Config_Handlers/RT-CCM/SRD_Handler.cpp
	* tools/Config_Handlers/RT-CCM/SRD_Handler.h

	New functionality in the Config_Handlers. 
	
Mon Oct  3 10:00:08 2005  William Otte  <wotte@dre.vanderbilt.edu>

	* bin/valgrind_nodedaemon.py

	Script to help launch nodemanager/nodeapplication under Valgrind. 
	
Mon Oct  3 000:31:09 UTC 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * docs/Purify.html:
        
          New file, documenting the use of Purify with CIAO and DAnCE.

Sun Oct  2 22:24:15 UTC 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tools/Config_Handlers/Basic_Deployment_Data.hpp:
        
          Added include of RT-CCM/CIAOServerResources.hpp.
          
        * tools/Config_Handlers/DP_Handler.cpp:
        
          Added export macros to friend function declarations.

Sat Oct 1 15:38:23  2005  William Otte <wotte@dre.vanderbilt.edu>

        * tools/Config_Handlers/Config_Handlers.mpc
        * tools/Config_Handlers/test.cpp
        
        Corrected the config handler test to properly test the handlers. 
        
        * tools/Config_Handlers/PSPE_Handler.cpp
        
        Fixed a run-time bug that was causing corrupted plans in Borland
        builds. 
        
Friday Sep 30 15:12:43 2005  William Otte <wotte@dre.vanderbilt.edu>

        * DAnCE/DomainApplicationManager/DomainApplicationManager.mpc